<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".activity.parent.GetStartedActivity"

    >

    <View
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/circles" />

    <TextView

        android:id="@+id/wlecome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/we_care2"
        android:textAlignment="center"
        android:textAppearance="@style/h2" />


    <View
        android:id="@+id/loving"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:background="@drawable/loving"
        android:elevation="20dp" />


    <TextView

        android:id="@+id/greetings"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/loving"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/we_care"
        android:textAlignment="center"
        android:textAppearance="@style/h4" />


    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="327dp"
        android:layout_height="68dp"
        android:layout_marginTop="40dp"
        android:layout_below="@id/greetings"
        android:layout_centerHorizontal="true"
        android:text="@string/get_started"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_get_started"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_account_log_in"
        android:textAppearance="@style/h6"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>